🐛 fix(docs): Escape JSON objects in MDX table cells to resolve parsing errors
Fixed MDX parsing errors by wrapping JSON objects and arrays in table cells with backticks in both English and Chinese realtime API documentation files. This prevents the MDX parser from interpreting curly braces as JSX expressions.

--- a/content/docs/en/api/realtime/openai-realtime.mdx
+++ b/content/docs/en/api/realtime/openai-realtime.mdx
@@ -928,7 +928,7 @@ Returned when conversation is created.
 | ------------ | ------ | -------- | ---------------------------------- | ----------------------------------------------------- |
 | event_id     | String | No       | Unique identifier for server event | event_9101                                            |
 | type         | String | No       | Event type                         | conversation.created                                  |
-| conversation | Object | No       | Conversation resource object       | {"id": "conv_001", "object": "realtime.conversation"} |
+| conversation | Object | No       | Conversation resource object       | `{"id": "conv_001", "object": "realtime.conversation"}` |
 
 #### conversation.item.created
 
@@ -939,7 +939,7 @@ Returned when conversation item is created.
 | event_id         | String | No       | Unique identifier for server event | event_1920                                                                                                                                             |
 | type             | String | No       | Event type                         | conversation.item.created                                                                                                                              |
 | previous_item_id | String | No       | ID of previous conversation item   | msg_002                                                                                                                                                |
-| item             | Object | No       | Conversation item object           | {"id": "msg_003", "object": "realtime.item", "type": "message", "status": "completed", "role": "user", "content": [{"type": "text", "text": "Hello"}]} |
+| item             | Object | No       | Conversation item object           | `{"id": "msg_003", "object": "realtime.item", "type": "message", "status": "completed", "role": "user", "content": [{"type": "text", "text": "Hello"}]}` |
 
 #### session.created
 
@@ -949,7 +949,7 @@ Returned when session is created.
 | --------- | ------ | -------- | ---------------------------------- | --------------------------------------------------------------------------------------------------- |
 | event_id  | String | No       | Unique identifier for server event | event_1234                                                                                          |
 | type      | String | No       | Event type                         | session.created                                                                                     |
-| session   | Object | No       | Session object                     | {"id": "sess_001", "object": "realtime.session", "model": "gpt-4", "modalities": ["text", "audio"]} |
+| session   | Object | No       | Session object                     | `{"id": "sess_001", "object": "realtime.session", "model": "gpt-4", "modalities": ["text", "audio"]}` |
 
 #### session.updated
 
@@ -959,7 +959,7 @@ Returned when session is updated.
 | --------- | ------ | -------- | ---------------------------------- | --------------------------------------------------------------------------------------------------- |
 | event_id  | String | No       | Unique identifier for server event | event_5678                                                                                          |
 | type      | String | No       | Event type                         | session.updated                                                                                     |
-| session   | Object | No       | Updated session object             | {"id": "sess_001", "object": "realtime.session", "model": "gpt-4", "modalities": ["text", "audio"]} |
+| session   | Object | No       | Updated session object             | `{"id": "sess_001", "object": "realtime.session", "model": "gpt-4", "modalities": ["text", "audio"]}` |
 
 ### Rate Limit Event Parameter Table
 
@@ -977,7 +977,7 @@ Returned when session is updated.
 | type        | String | Yes      | Function type                 | function                                |
 | name        | String | Yes      | Function name                 | get_weather                             |
 | description | String | No       | Function description          | Get the current weather                 |
-| parameters  | Object | Yes      | Function parameter definition | {"type": "object", "properties": {...}} |
+| parameters  | Object | Yes      | Function parameter definition | `{"type": "object", "properties": {...}}` |
 
 ### Audio Format Parameter Table
 
@@ -1025,8 +1025,8 @@ Returned when session is updated.
 | Parameter | Type   | Description       | Optional Values                                    |
 | --------- | ------ | ----------------- | -------------------------------------------------- |
 | status    | String | Session status    | active, ended, error                               |
-| error     | Object | Error information | {"type": "error_type", "message": "error message"} |
-| metadata  | Object | Session metadata  | {"client_id": "web", "session_type": "chat"}       |
+| error     | Object | Error information | `{"type": "error_type", "message": "error message"}` |
+| metadata  | Object | Session metadata  | `{"client_id": "web", "session_type": "chat"}`       |
 
 ### Conversation Item Status Parameter Table
 
@@ -1049,8 +1049,8 @@ Returned when session is updated.
 | Parameter      | Type   | Description      | Optional Values                                               |
 | -------------- | ------ | ---------------- | ------------------------------------------------------------- |
 | status         | String | Response status  | completed, cancelled, failed, incomplete                      |
-| status_details | Object | Status details   | {"reason": "user_cancelled"}                                  |
-| usage          | Object | Usage statistics | {"total_tokens": 50, "input_tokens": 20, "output_tokens": 30} |
+| status_details | Object | Status details   | `{"reason": "user_cancelled"}`                                  |
+| usage          | Object | Usage statistics | `{"total_tokens": 50, "input_tokens": 20, "output_tokens": 30}` |
 
 ### Audio Transcription Parameter Table
 
@@ -1073,6 +1073,6 @@ Returned when session is updated.
 
 | Parameter          | Type    | Description                       | Default Value                              |
 | ------------------ | ------- | --------------------------------- | ------------------------------------------ |
-| ice_servers        | Array   | ICE server list                   | [{"urls": "stun:stun.l.google.com:19302"}] |
-| audio_constraints  | Object  | Audio constraints                 | {"echoCancellation": true}                 |
+| ice_servers        | Array   | ICE server list                   | `[{"urls": "stun:stun.l.google.com:19302"}]` |
+| audio_constraints  | Object  | Audio constraints                 | `{"echoCancellation": true}`                 |
 | connection_timeout | Integer | Connection timeout (milliseconds) | 30000                                      |
