--- a/content/docs/zh/api/realtime/openai-realtime.mdx
+++ b/content/docs/zh/api/realtime/openai-realtime.mdx
@@ -925,7 +925,7 @@ def on_message(ws, message):
 | ------------ | ------ | ---- | ---------------------- | ----------------------------------------------------- |
 | event_id     | 字符串 | 否   | 服务端事件的唯一标识符 | event_9101                                            |
 | type         | 字符串 | 否   | 事件类型               | conversation.created                                  |
-| conversation | 对象   | 否   | 对话资源对象           | {"id": "conv_001", "object": "realtime.conversation"} |
+| conversation | 对象   | 否   | 对话资源对象           | `{"id": "conv_001", "object": "realtime.conversation"}` |
 
 #### conversation.item.created
 
@@ -936,7 +936,7 @@ def on_message(ws, message):
 | event_id         | 字符串 | 否   | 服务端事件的唯一标识符 | event_1920                                                                                                                                             |
 | type             | 字符串 | 否   | 事件类型               | conversation.item.created                                                                                                                              |
 | previous_item_id | 字符串 | 否   | 前一个对话项的ID       | msg_002                                                                                                                                                |
-| item             | 对象   | 否   | 对话项对象             | {"id": "msg_003", "object": "realtime.item", "type": "message", "status": "completed", "role": "user", "content": [{"type": "text", "text": "Hello"}]} |
+| item             | 对象   | 否   | 对话项对象             | `{"id": "msg_003", "object": "realtime.item", "type": "message", "status": "completed", "role": "user", "content": [{"type": "text", "text": "Hello"}]}` |
 
 #### session.created
 
@@ -946,7 +946,7 @@ def on_message(ws, message):
 | -------- | ------ | ---- | ---------------------- | --------------------------------------------------------------------------------------------------- |
 | event_id | 字符串 | 否   | 服务端事件的唯一标识符 | event_1234                                                                                          |
 | type     | 字符串 | 否   | 事件类型               | session.created                                                                                     |
-| session  | 对象   | 否   | 会话对象               | {"id": "sess_001", "object": "realtime.session", "model": "gpt-4", "modalities": ["text", "audio"]} |
+| session  | 对象   | 否   | 会话对象               | `{"id": "sess_001", "object": "realtime.session", "model": "gpt-4", "modalities": ["text", "audio"]}` |
 
 #### session.updated
 
@@ -956,7 +956,7 @@ def on_message(ws, message):
 | -------- | ------ | ---- | ---------------------- | --------------------------------------------------------------------------------------------------- |
 | event_id | 字符串 | 否   | 服务端事件的唯一标识符 | event_5678                                                                                          |
 | type     | 字符串 | 否   | 事件类型               | session.updated                                                                                     |
-| session  | 对象   | 否   | 更新后的会话对象       | {"id": "sess_001", "object": "realtime.session", "model": "gpt-4", "modalities": ["text", "audio"]} |
+| session  | 对象   | 否   | 更新后的会话对象       | `{"id": "sess_001", "object": "realtime.session", "model": "gpt-4", "modalities": ["text", "audio"]}` |
 
 ### 速率限制事件参数表
 
@@ -974,7 +974,7 @@ def on_message(ws, message):
 | type        | 字符串 | 是   | 函数类型     | function                                |
 | name        | 字符串 | 是   | 函数名称     | get_weather                             |
 | description | 字符串 | 否   | 函数描述     | Get the current weather                 |
-| parameters  | 对象   | 是   | 函数参数定义 | {"type": "object", "properties": {...}} |
+| parameters  | 对象   | 是   | 函数参数定义 | `{"type": "object", "properties": {...}}` |
 
 ### 音频格式参数表
 
@@ -1022,8 +1022,8 @@ def on_message(ws, message):
 | 参数     | 类型   | 说明       | 可选值                                             |
 | -------- | ------ | ---------- | -------------------------------------------------- |
 | status   | 字符串 | 会话状态   | active, ended, error                               |
-| error    | 对象   | 错误信息   | {"type": "error_type", "message": "error message"} |
-| metadata | 对象   | 会话元数据 | {"client_id": "web", "session_type": "chat"}       |
+| error    | 对象   | 错误信息   | `{"type": "error_type", "message": "error message"}` |
+| metadata | 对象   | 会话元数据 | `{"client_id": "web", "session_type": "chat"}`       |
 
 ### 对话项状态参数表
 
@@ -1046,8 +1046,8 @@ def on_message(ws, message):
 | 参数           | 类型   | 说明     | 可选值                                                        |
 | -------------- | ------ | -------- | ------------------------------------------------------------- |
 | status         | 字符串 | 响应状态 | completed, cancelled, failed, incomplete                      |
-| status_details | 对象   | 状态详情 | {"reason": "user_cancelled"}                                  |
-| usage          | 对象   | 使用统计 | {"total_tokens": 50, "input_tokens": 20, "output_tokens": 30} |
+| status_details | 对象   | 状态详情 | `{"reason": "user_cancelled"}`                                  |
+| usage          | 对象   | 使用统计 | `{"total_tokens": 50, "input_tokens": 20, "output_tokens": 30}` |
 
 ### 音频转写参数表
 
@@ -1070,6 +1070,6 @@ def on_message(ws, message):
 
 | 参数               | 类型 | 说明           | 默认值                                     |
 | ------------------ | ---- | -------------- | ------------------------------------------ |
-| ice_servers        | 数组 | ICE 服务器列表 | [{"urls": "stun:stun.l.google.com:19302"}] |
-| audio_constraints  | 对象 | 音频约束       | {"echoCancellation": true}                 |
+| ice_servers        | 数组 | ICE 服务器列表 | `[{"urls": "stun:stun.l.google.com:19302"}]` |
+| audio_constraints  | 对象 | 音频约束       | `{"echoCancellation": true}`                 |
 | connection_timeout | 整数 | 连接超时(毫秒) | 30000                                      |
