🔗 fix: update internal documentation links to use absolute paths
Replace relative path links with `.md` extension to absolute paths
with language prefix format `/{lang}/docs/{path}` across all MDX files.

## Changes

### Fixed link format
- Before: `[text](filename.md)` or `[text](../path/filename.md)`
- After: `[text](/{lang}/docs/path/filename)`

### Affected files (22 links per language × 3 languages = 66 total)

**installation/deployment-methods/**
- local-development.mdx (2 links)
- docker-installation.mdx (1 link)
- docker-compose-installation.mdx (1 link)
- cluster-deployment.mdx (3 links)

**installation/config-maintenance/**
- system-update.mdx (2 links)
- environment-variables.mdx (3 links)
- docker-compose-yml.mdx (2 links)

**support/**
- community-interaction.mdx (1 link)
- feedback-issues.mdx (1 link)
- faq.mdx (3 links)

**guide/console/settings/**
- rate-settings.mdx (1 link)

**apis/relay-apis/rerank/**
- xinference-rerank.mdx (2 links)
- cohere-rerank.mdx (1 link)

## Why
- Fumadocs framework requires absolute paths for internal navigation
- Relative `.md` links cause 404 errors in the built documentation
- Each language version should reference its own language prefix

--- a/content/docs/en/apis/relay-apis/rerank/cohere-rerank.mdx
+++ b/content/docs/en/apis/relay-apis/rerank/cohere-rerank.mdx
@@ -4,7 +4,7 @@ title: Cohere Rerank Format
 
 <Callout type="warn" title="Important Note">
   Cohere's Rerank model interface and [Jina's Rerank model interface
-  format](jinaai-rerank.md) are the same.
+  format](/en/docs/apis/relay-apis/rerank/jinaai-rerank) are the same.
 </Callout>
 
 <Callout type="info" title="Official Documentation">
