--- a/content/docs/en/apis/relay-apis/rerank/xinference-rerank.mdx
+++ b/content/docs/en/apis/relay-apis/rerank/xinference-rerank.mdx
@@ -12,7 +12,7 @@ title: Xinference Rerank Format
 
 ## 📝 Introduction
 
-Xinference's rerank API is fully compatible with Jina AI's rerank API. Please refer to the [Jina AI Rerank Format](jinaai-rerank.md) documentation for detailed usage, request parameters, and response format.
+Xinference's rerank API is fully compatible with Jina AI's rerank API. Please refer to the [Jina AI Rerank Format](/en/docs/apis/relay-apis/rerank/jinaai-rerank) documentation for detailed usage, request parameters, and response format.
 
 ## 💡 Usage
 
@@ -38,4 +38,4 @@ curl https://your-newapi-server-address/v1/rerank \
   }'
 ```
 
-For more details, please refer to the [Jina AI Rerank Format](jinaai-rerank.md) documentation.
+For more details, please refer to the [Jina AI Rerank Format](/en/docs/apis/relay-apis/rerank/jinaai-rerank) documentation.
