--- a/content/docs/en/guide/console/settings/rate-settings.mdx
+++ b/content/docs/en/guide/console/settings/rate-settings.mdx
@@ -236,4 +236,4 @@ Equivalent USD Cost: 416.25 ÷ 500,000 = $0.00083
 
 Equivalent USD Cost: 10,000 ÷ 500,000 = $0.02
 
-For more billing rules, please refer to [Frequently Asked Questions](../support/faq.md)
+For more billing rules, please refer to [Frequently Asked Questions](/en/docs/support/faq)
