--- a/content/docs/en/installation/config-maintenance/docker-compose-yml.mdx
+++ b/content/docs/en/installation/config-maintenance/docker-compose-yml.mdx
@@ -147,7 +147,7 @@ New API supports various environment variable configurations. Here are some comm
 | `NODE_TYPE`          | Node type (master/slave)                            | `master` or `slave`                   |
 | `SYNC_FREQUENCY`     | Sync frequency (seconds)                            | `60`                                  |
 
-For a more complete list of environment variables, please refer to the [Environment Variables Configuration Guide](environment-variables.md).
+For a more complete list of environment variables, please refer to the [Environment Variables Configuration Guide](/en/docs/installation/config-maintenance/environment-variables).
 
 ## Multi-Node Deployment Configuration
 
@@ -219,5 +219,6 @@ docker compose down
 
 <Callout type="info" title="Tip">
   For more information on using Docker Compose, please refer to the [Docker
-  Compose Installation Guide](docker-compose-installation.md).
+  Compose Installation
+  Guide](/en/docs/installation/deployment-methods/docker-compose-installation).
 </Callout>
