--- a/content/docs/en/installation/config-maintenance/environment-variables.mdx
+++ b/content/docs/en/installation/config-maintenance/environment-variables.mdx
@@ -54,7 +54,7 @@ This document provides all environment variables supported by New API and their 
 <Callout type="info" title="Cluster Deployment">
   For information on how to use these environment variables to build a complete
   cluster deployment, please refer to the [Cluster Deployment
-  Guide](cluster-deployment.md).
+  Guide](/en/docs/installation/deployment-methods/cluster-deployment).
 </Callout>
 
 ## User and Token Configuration
@@ -219,7 +219,8 @@ SYNC_FREQUENCY=60
 <Callout type="info" title="Complete Cluster Configuration">
   This is just a basic multi-node configuration example. For complete cluster
   deployment configuration, architectural descriptions, and best practices,
-  please refer to the [Cluster Deployment Guide](cluster-deployment.md).
+  please refer to the [Cluster Deployment
+  Guide](/en/docs/installation/deployment-methods/cluster-deployment).
 </Callout>
 
 ## Environment Variable Example in Docker Compose
@@ -242,4 +243,4 @@ services:
       - CHANNEL_UPDATE_FREQUENCY=1440
 ```
 
-For complete Docker Compose configuration, including more environment variable setting options, please refer to the [Docker Compose Configuration Instructions](docker-compose-yml.md) document.
+For complete Docker Compose configuration, including more environment variable setting options, please refer to the [Docker Compose Configuration Instructions](/en/docs/installation/config-maintenance/docker-compose-yml) document.
