--- a/content/docs/en/installation/config-maintenance/system-update.mdx
+++ b/content/docs/en/installation/config-maintenance/system-update.mdx
@@ -43,7 +43,7 @@ docker run --name new-api -d --restart always \
 
 ### Method Two: Update using Docker Compose
 
-If you are deploying using Docker Compose (see [Docker Compose Configuration Instructions](docker-compose-yml.md)), the update process is simpler:
+If you are deploying using Docker Compose (see [Docker Compose Configuration Instructions](/en/docs/installation/config-maintenance/docker-compose-yml)), the update process is simpler:
 
 ```shell
 # 进入项目目录
@@ -117,7 +117,8 @@ This strategy can minimize the risk of service interruption.
 
 <Callout title="Detailed Guide">
   For a complete guide on cluster deployment, please refer to the [Cluster
-  Deployment Documentation](cluster-deployment.md).
+  Deployment
+  Documentation](/en/docs/installation/deployment-methods/cluster-deployment).
 </Callout>
 
 ## Post-update Checklist
