--- a/content/docs/en/installation/deployment-methods/cluster-deployment.mdx
+++ b/content/docs/en/installation/deployment-methods/cluster-deployment.mdx
@@ -254,6 +254,6 @@ As your business grows, you may need to expand your cluster size. The scaling st
 
 ## Related Documentation
 
-- [Environment Variable Configuration Guide](environment-variables.md) - Contains all relevant environment variables for multi-node deployment
-- [System Update Guide](system-update.md) - System update strategy in a multi-node environment
-- [Docker Compose Configuration Instructions](docker-compose-yml.md) - Used for writing cluster node configuration files
+- [Environment Variable Configuration Guide](/en/docs/installation/config-maintenance/environment-variables) - Contains all relevant environment variables for multi-node deployment
+- [System Update Guide](/en/docs/installation/config-maintenance/system-update) - System update strategy in a multi-node environment
+- [Docker Compose Configuration Instructions](/en/docs/installation/config-maintenance/docker-compose-yml) - Used for writing cluster node configuration files
