--- a/content/docs/en/installation/deployment-methods/docker-installation.mdx
+++ b/content/docs/en/installation/deployment-methods/docker-installation.mdx
@@ -6,9 +6,10 @@ This document provides detailed steps for deploying New API using Docker.
 
 <Callout type="warn" title="Highly Recommended">
   We highly recommend using the [Docker Compose installation
-  method](docker-compose-installation.md) instead of manually starting Docker
-  containers. The Docker Compose method offers better configuration management,
-  service orchestration, and deployment experience.
+  method](/en/docs/installation/deployment-methods/docker-compose-installation)
+  instead of manually starting Docker containers. The Docker Compose method
+  offers better configuration management, service orchestration, and deployment
+  experience.
 </Callout>
 
 ## Basic Requirements
