--- a/content/docs/en/support/community-interaction.mdx
+++ b/content/docs/en/support/community-interaction.mdx
@@ -13,7 +13,7 @@ To maintain a positive community environment, please observe the following rules
   members are requested to read and comply carefully.
 </Callout>
 
-1.  Group administrators and the group owner are under no obligation to provide you with any technical support. If you have questions, please submit an [issue](feedback-issues.md).
+1.  Group administrators and the group owner are under no obligation to provide you with any technical support. If you have questions, please submit an [issue](/en/docs/support/feedback-issues).
 2.  The group chat prohibits posting any information related to account sales or purchases. Group nicknames are prohibited from containing any purchase guidance or solicitation information.
 3.  This group does not sell any API products. Please do not trust or purchase API products from anyone (including administrators).
 4.  New API does not have a paid version.
