--- a/content/docs/en/support/faq.mdx
+++ b/content/docs/en/support/faq.mdx
@@ -143,6 +143,6 @@ title: FAQ
   If your question is not answered here, you are welcome to:
 </Callout>
 
-    1. Check the [Installation and Deployment Documentation](../installation)
-    2. [Submit an issue on GitHub](feedback-issues.md)
-    3. Join the [QQ communication group for help](community-interaction.md)
+    1. Check the [Installation and Deployment Documentation](/en/docs/installation)
+    2. [Submit an issue on GitHub](/en/docs/support/feedback-issues)
+    3. Join the [QQ communication group for help](/en/docs/support/community-interaction)
