--- a/content/docs/en/support/feedback-issues.mdx
+++ b/content/docs/en/support/feedback-issues.mdx
@@ -14,7 +14,7 @@ Please visit our GitHub Issues page: [New API Issues](https://github.com/Calcium
 
     1. Search to see if a similar issue already exists
     2. Ensure you are using the latest version
-    3. Check if there are relevant answers in the [FAQ document](faq.md)
+    3. Check if there are relevant answers in the [FAQ document](/en/docs/support/faq)
 
 ![feedback-issues](/assets/issues.png)
 
