--- a/content/docs/ja/apis/relay-apis/rerank/cohere-rerank.mdx
+++ b/content/docs/ja/apis/relay-apis/rerank/cohere-rerank.mdx
@@ -4,7 +4,8 @@ title: Cohere リランキングフォーマット（Rerank）
 
 <Callout type="warn" title="重要">
   Cohere の Rerank モデルインターフェースは、[Jina の Rerank
-  モデルインターフェースフォーマット](jinaai-rerank.md) と同じです。
+  モデルインターフェースフォーマット](/ja/docs/apis/relay-apis/rerank/jinaai-rerank)
+  と同じです。
 </Callout>
 
 <Callout type="info" title="公式ドキュメント">
