--- a/content/docs/ja/apis/relay-apis/rerank/xinference-rerank.mdx
+++ b/content/docs/ja/apis/relay-apis/rerank/xinference-rerank.mdx
@@ -10,7 +10,7 @@ title: Xinference リランキング形式（Rerank）
 
 ## 📝 はじめに
 
-XinferenceのリランキングAPIは、Jina AIのリランキングAPIと完全に互換性があります。詳細な使用方法、リクエストパラメータ、および応答形式については、[Jina AI リランキング形式（Rerank）](jinaai-rerank.md)ドキュメントを参照してください。
+XinferenceのリランキングAPIは、Jina AIのリランキングAPIと完全に互換性があります。詳細な使用方法、リクエストパラメータ、および応答形式については、[Jina AI リランキング形式（Rerank）](/ja/docs/apis/relay-apis/rerank/jinaai-rerank)ドキュメントを参照してください。
 
 ## 💡 使用方法
 
@@ -36,4 +36,4 @@ curl https://あなたのnewapiサーバーアドレス/v1/rerank \
   }'
 ```
 
-詳細については、[Jina AI リランキング形式（Rerank）](jinaai-rerank.md)ドキュメントを参照してください。
+詳細については、[Jina AI リランキング形式（Rerank）](/ja/docs/apis/relay-apis/rerank/jinaai-rerank)ドキュメントを参照してください。
