--- a/content/docs/ja/installation/config-maintenance/environment-variables.mdx
+++ b/content/docs/ja/installation/config-maintenance/environment-variables.mdx
@@ -52,7 +52,7 @@ title: 環境変数の設定ガイド
 | `INITIAL_ROOT_ACCESS_TOKEN` | 初回起動時に作成されるシステム管理トークン                | -            | `INITIAL_ROOT_ACCESS_TOKEN=your_token`      |
 
 <Callout type="info" title="クラスターデプロイメント">
-  これらの環境変数を使用して完全なクラスターデプロイメントを構築する方法については、[クラスターデプロイメントガイド](cluster-deployment.md)を参照してください。
+  これらの環境変数を使用して完全なクラスターデプロイメントを構築する方法については、[クラスターデプロイメントガイド](/ja/docs/installation/deployment-methods/cluster-deployment)を参照してください。
 </Callout>
 
 ## ユーザーおよびトークン設定
@@ -215,7 +215,7 @@ SYNC_FREQUENCY=60
 ```
 
 <Callout type="info" title="完全なクラスター設定">
-  これは基本的なマルチノード設定の例にすぎません。完全なクラスターデプロイメント設定、アーキテクチャの説明、およびベストプラクティスについては、[クラスターデプロイメントガイド](cluster-deployment.md)を参照してください。
+  これは基本的なマルチノード設定の例にすぎません。完全なクラスターデプロイメント設定、アーキテクチャの説明、およびベストプラクティスについては、[クラスターデプロイメントガイド](/ja/docs/installation/deployment-methods/cluster-deployment)を参照してください。
 </Callout>
 
 ## Docker Composeにおける環境変数例
@@ -238,4 +238,4 @@ services:
       - CHANNEL_UPDATE_FREQUENCY=1440
 ```
 
-完全なDocker Compose設定については、より多くの環境変数設定オプションを含め、[Docker Compose設定説明](docker-compose-yml.md)ドキュメントを参照してください。
+完全なDocker Compose設定については、より多くの環境変数設定オプションを含め、[Docker Compose設定説明](/ja/docs/installation/config-maintenance/docker-compose-yml)ドキュメントを参照してください。
