--- a/content/docs/ja/installation/config-maintenance/system-update.mdx
+++ b/content/docs/ja/installation/config-maintenance/system-update.mdx
@@ -41,7 +41,7 @@ docker run --name new-api -d --restart always \
 
 ### 方法2：Docker Composeを使用した更新
 
-Docker Composeを使用してデプロイしている場合（[Docker Compose設定説明](docker-compose-yml.md)を参照）、更新プロセスはより簡単です。
+Docker Composeを使用してデプロイしている場合（[Docker Compose設定説明](/ja/docs/installation/config-maintenance/docker-compose-yml)を参照）、更新プロセスはより簡単です。
 
 ```shell
 # 进入项目目录
@@ -113,7 +113,7 @@ cd 说
 この戦略により、サービス中断のリスクを最小限に抑えることができます。
 
 <Callout title="詳細ガイド">
-  クラスターデプロイの完全なガイドについては、[クラスターデプロイメントドキュメント](cluster-deployment.md)を参照してください。
+  クラスターデプロイの完全なガイドについては、[クラスターデプロイメントドキュメント](/ja/docs/installation/deployment-methods/cluster-deployment)を参照してください。
 </Callout>
 
 ## 更新後の確認事項
