--- a/content/docs/ja/installation/deployment-methods/cluster-deployment.mdx
+++ b/content/docs/ja/installation/deployment-methods/cluster-deployment.mdx
@@ -253,6 +253,6 @@ environment:
 
 ## 関連ドキュメント
 
-- [環境変数設定ガイド](environment-variables.md) - マルチノードデプロイに関連するすべての環境変数を含みます
-- [システム更新ガイド](system-update.md) - マルチノード環境でのシステム更新戦略
-- [Docker Compose 設定説明](docker-compose-yml.md) - クラスターノード設定ファイルの作成に使用されます
+- [環境変数設定ガイド](/ja/docs/installation/config-maintenance/environment-variables) - マルチノードデプロイに関連するすべての環境変数を含みます
+- [システム更新ガイド](/ja/docs/installation/config-maintenance/system-update) - マルチノード環境でのシステム更新戦略
+- [Docker Compose 設定説明](/ja/docs/installation/config-maintenance/docker-compose-yml) - クラスターノード設定ファイルの作成に使用されます
