--- a/content/docs/ja/installation/deployment-methods/docker-compose-installation.mdx
+++ b/content/docs/ja/installation/deployment-methods/docker-compose-installation.mdx
@@ -48,7 +48,7 @@ cd new-api
 
 1. そのディレクトリ内に `docker-compose.yml` ファイルを作成します。
 
-   [Docker Compose 設定説明](docker-compose-yml.md) ドキュメントの設定例を参考に、ご自身の要件に応じて選択してください。
+   [Docker Compose 設定説明](/ja/docs/installation/config-maintenance/docker-compose-yml) ドキュメントの設定例を参考に、ご自身の要件に応じて選択してください。
    - 本番環境では完全な設定（MySQL と Redis を含む）の使用を推奨します。
    - テスト環境では簡略化された設定を使用できます。
 
