--- a/content/docs/ja/installation/deployment-methods/docker-installation.mdx
+++ b/content/docs/ja/installation/deployment-methods/docker-installation.mdx
@@ -6,7 +6,7 @@ title: Docker デプロイ
 
 <Callout type="warn" title="強く推奨">
   Dockerコンテナを手動で起動するのではなく、[Docker Compose
-  インストール方法](docker-compose-installation.md)を使用することを強く推奨します。Docker
+  インストール方法](/ja/docs/installation/deployment-methods/docker-compose-installation)を使用することを強く推奨します。Docker
   Compose方式は、より優れた設定管理、サービスオーケストレーション、およびデプロイ体験を提供します。
 </Callout>
 
