--- a/content/docs/ja/support/community-interaction.mdx
+++ b/content/docs/ja/support/community-interaction.mdx
@@ -12,7 +12,7 @@ New API オープンソースコミュニティへようこそ！ここでは、
   以下のルールに違反した場合、グループチャットから削除される可能性がありますので、メンバーの皆様はよくお読みになり、遵守してください。
 </Callout>
 
-1.  本グループの管理者およびグループオーナーは、皆様に技術サポートを提供する義務を一切負いません。問題がある場合は、[issue](feedback-issues.md) を提出してください。
+1.  本グループの管理者およびグループオーナーは、皆様に技術サポートを提供する義務を一切負いません。問題がある場合は、[issue](/ja/docs/support/feedback-issues) を提出してください。
 2.  グループチャットでは、アカウントの販売や購入に関する情報の投稿を禁止します。グループニックネームに購入誘導や購入に関する情報を表示することも禁止します。
 3.  本グループではいかなるAPI製品も販売していません。いかなる人物（管理者を含む）のAPI製品も信用して購入しないでください。
 4.  New API には有料版は存在しません。
