--- a/content/docs/ja/support/faq.mdx
+++ b/content/docs/ja/support/faq.mdx
@@ -151,6 +151,6 @@ title: よくある質問
   もしここにあなたの質問への回答がない場合は、以下をご利用ください。
 </Callout>
 
-    1. [インストールとデプロイのドキュメント](../installation) を参照する
-    2. [GitHubでissueを提出する](feedback-issues.md)
-    3. [QQ交流グループに参加して助けを求める](community-interaction.md)
+    1. [インストールとデプロイのドキュメント](/ja/docs/installation) を参照する
+    2. [GitHubでissueを提出する](/ja/docs/support/feedback-issues)
+    3. [QQ交流グループに参加して助けを求める](/ja/docs/support/community-interaction)
