--- a/content/docs/ja/support/feedback-issues.mdx
+++ b/content/docs/ja/support/feedback-issues.mdx
@@ -14,7 +14,7 @@ GitHub Issuesページにアクセスしてください：[New API Issues](https
 
     1. 類似の問題がすでに存在しないか検索する
     2. 最新バージョンを使用していることを確認する
-    3. [よくある質問ドキュメント](faq.md) に関連する回答がないか確認する
+    3. [よくある質問ドキュメント](/ja/docs/support/faq) に関連する回答がないか確認する
 
 ![feedback-issues](/assets/issues.png)
 
