--- a/content/docs/zh/apis/relay-apis/rerank/cohere-rerank.mdx
+++ b/content/docs/zh/apis/relay-apis/rerank/cohere-rerank.mdx
@@ -3,7 +3,8 @@ title: Cohere 重排序格式（Rerank）
 ---
 
 <Callout type="warn" title="重要提示">
-  cohere 的 Rerank 模型接口和 [Jina的Rerank模型接口格式](jinaai-rerank.md)
+  cohere 的 Rerank 模型接口和
+  [Jina的Rerank模型接口格式](/zh/docs/apis/relay-apis/rerank/jinaai-rerank)
   是一样的。
 </Callout>
 
