--- a/content/docs/zh/apis/relay-apis/rerank/xinference-rerank.mdx
+++ b/content/docs/zh/apis/relay-apis/rerank/xinference-rerank.mdx
@@ -10,7 +10,7 @@ title: Xinference 重排序格式（Rerank）
 
 ## 📝 简介
 
-Xinference的重排序API与Jina AI的重排序API完全兼容。请参考[Jina AI 重排序格式（Rerank）](jinaai-rerank.md)文档了解详细的使用方法、请求参数和响应格式。
+Xinference的重排序API与Jina AI的重排序API完全兼容。请参考[Jina AI 重排序格式（Rerank）](/zh/docs/apis/relay-apis/rerank/jinaai-rerank)文档了解详细的使用方法、请求参数和响应格式。
 
 ## 💡 使用方法
 
@@ -36,4 +36,4 @@ curl https://你的newapi服务器地址/v1/rerank \
   }'
 ```
 
-有关更多详细信息，请参考[Jina AI 重排序格式（Rerank）](jinaai-rerank.md)文档。
+有关更多详细信息，请参考[Jina AI 重排序格式（Rerank）](/zh/docs/apis/relay-apis/rerank/jinaai-rerank)文档。
