--- a/content/docs/zh/installation/config-maintenance/docker-compose-yml.mdx
+++ b/content/docs/zh/installation/config-maintenance/docker-compose-yml.mdx
@@ -147,7 +147,7 @@ New API支持多种环境变量配置，以下是常用的几个：
 | `NODE_TYPE`         | 节点类型(主/从)        | `master`或`slave`                     |
 | `SYNC_FREQUENCY`    | 同步频率(秒)           | `60`                                  |
 
-更完整的环境变量列表请参考[环境变量配置指南](environment-variables.md)。
+更完整的环境变量列表请参考[环境变量配置指南](/zh/docs/installation/config-maintenance/environment-variables)。
 
 ## 多节点部署配置
 
@@ -219,5 +219,5 @@ docker compose down
 
 <Callout type="info" title="提示">
   更多关于Docker Compose的使用方法，请参考[Docker
-  Compose安装指南](docker-compose-installation.md)。
+  Compose安装指南](/zh/docs/installation/deployment-methods/docker-compose-installation)。
 </Callout>
