--- a/content/docs/zh/installation/config-maintenance/environment-variables.mdx
+++ b/content/docs/zh/installation/config-maintenance/environment-variables.mdx
@@ -52,7 +52,7 @@ title: 环境变量配置指南
 | `INITIAL_ROOT_ACCESS_TOKEN` | 首次启动时创建的系统管理令牌 | -        | `INITIAL_ROOT_ACCESS_TOKEN=your_token`      |
 
 <Callout type="info" title="集群部署">
-  关于如何使用这些环境变量构建完整的集群部署，请参考[集群部署指南](cluster-deployment.md)。
+  关于如何使用这些环境变量构建完整的集群部署，请参考[集群部署指南](/zh/docs/installation/deployment-methods/cluster-deployment)。
 </Callout>
 
 ## 用户及令牌配置
@@ -214,7 +214,7 @@ SYNC_FREQUENCY=60
 ```
 
 <Callout type="info" title="完整集群配置">
-  这只是基本的多节点配置示例。完整的集群部署配置、架构说明和最佳实践，请参考[集群部署指南](cluster-deployment.md)。
+  这只是基本的多节点配置示例。完整的集群部署配置、架构说明和最佳实践，请参考[集群部署指南](/zh/docs/installation/deployment-methods/cluster-deployment)。
 </Callout>
 
 ## Docker Compose中的环境变量示例
@@ -237,4 +237,4 @@ services:
       - CHANNEL_UPDATE_FREQUENCY=1440
 ```
 
-有关完整的Docker Compose配置，包括更多环境变量设置选项，请参考[Docker Compose配置说明](docker-compose-yml.md)文档。
+有关完整的Docker Compose配置，包括更多环境变量设置选项，请参考[Docker Compose配置说明](/zh/docs/installation/config-maintenance/docker-compose-yml)文档。
