--- a/content/docs/zh/installation/config-maintenance/system-update.mdx
+++ b/content/docs/zh/installation/config-maintenance/system-update.mdx
@@ -41,7 +41,7 @@ docker run --name new-api -d --restart always \
 
 ### 方法二：使用Docker Compose更新
 
-如果您使用Docker Compose部署（参见[Docker Compose配置说明](docker-compose-yml.md)），更新过程更为简单：
+如果您使用Docker Compose部署（参见[Docker Compose配置说明](/zh/docs/installation/config-maintenance/docker-compose-yml)），更新过程更为简单：
 
 ```shell
 # 进入项目目录
@@ -114,7 +114,7 @@ cd ..
 这种策略可以最大限度地减少服务中断风险。
 
 <Callout title="详细指南">
-  有关集群部署的完整指南，请参考[集群部署文档](cluster-deployment.md)。
+  有关集群部署的完整指南，请参考[集群部署文档](/zh/docs/installation/deployment-methods/cluster-deployment)。
 </Callout>
 
 ## 更新后的检查事项
