--- a/content/docs/zh/installation/deployment-methods/docker-installation.mdx
+++ b/content/docs/zh/installation/deployment-methods/docker-installation.mdx
@@ -5,7 +5,8 @@ title: Docker 部署
 本文档提供了使用Docker部署New API的详细步骤。
 
 <Callout type="warn" title="强烈推荐">
-  我们强烈推荐使用 [Docker Compose 安装方式](docker-compose-installation.md)
+  我们强烈推荐使用 [Docker Compose
+  安装方式](/zh/docs/installation/deployment-methods/docker-compose-installation)
   而不是手动启动Docker容器。Docker
   Compose方式提供了更好的配置管理、服务编排和部署体验。
 </Callout>
