--- a/content/docs/zh/support/community-interaction.mdx
+++ b/content/docs/zh/support/community-interaction.mdx
@@ -12,7 +12,7 @@ title: 社区互动
   违反以下规则可能会被移出群聊，请各位成员仔细阅读并遵守。
 </Callout>
 
-1. 本群管理和群主没有任何义务为您提供任何技术支持，如有问题请提交 [issue](feedback-issues.md)
+1. 本群管理和群主没有任何义务为您提供任何技术支持，如有问题请提交 [issue](/zh/docs/support/feedback-issues)
 2. 群聊禁止发布任何账号出售、求购相关信息，群昵称禁止出现任何购买引导、求购相关信息
 3. 本群不出售任何api产品，请勿听信购买任何人的api产品（包括管理员的）
 4. New API不存在收费版本
