--- a/content/docs/zh/support/faq.mdx
+++ b/content/docs/zh/support/faq.mdx
@@ -118,6 +118,6 @@ title: 常见问题
   如果这里没有解答您的问题，欢迎：
 </Callout>
 
-    1. 查看 [安装部署文档](../installation)
-    2. 在 [GitHub上提交issue](feedback-issues.md)
-    3. 加入 [QQ交流群寻求帮助](community-interaction.md)
+    1. 查看 [安装部署文档](/zh/docs/installation)
+    2. 在 [GitHub上提交issue](/zh/docs/support/feedback-issues)
+    3. 加入 [QQ交流群寻求帮助](/zh/docs/support/community-interaction)
