--- a/content/docs/zh/support/feedback-issues.mdx
+++ b/content/docs/zh/support/feedback-issues.mdx
@@ -14,7 +14,7 @@ title: 问题反馈
 
     1. 搜索是否已经存在类似的问题
     2. 确保使用的是最新版本
-    3. 检查 [常见问题文档](faq.md) 中是否已有相关解答
+    3. 检查 [常见问题文档](/zh/docs/support/faq) 中是否已有相关解答
 
 ![feedback-issues](/assets/issues.png)
 
