--- a/content/docs/en/installation/deployment-methods/docker-compose-installation.mdx
+++ b/content/docs/en/installation/deployment-methods/docker-compose-installation.mdx
@@ -49,7 +49,7 @@ cd new-api
 
 2. Create the `docker-compose.yml` file in this directory
 
-   You can refer to the configuration examples in the [Docker Compose Configuration Guide](docker-compose-yml.md) document and choose according to your needs:
+   You can refer to the configuration examples in the [Docker Compose Configuration Guide](/en/docs/installation/config-maintenance/docker-compose-yml) document and choose according to your needs:
    - For production environments, a complete configuration (including MySQL and Redis) is recommended.
    - For testing environments, a simplified configuration can be used.
 
