--- a/content/docs/en/installation/deployment-methods/local-development.mdx
+++ b/content/docs/en/installation/deployment-methods/local-development.mdx
@@ -741,7 +741,7 @@ new-api/                                 # Project root directory
 If you encounter problems during development, you can:
 
 1.  Check [GitHub Issues](https://github.com/Calcium-Ion/new-api/issues)
-2.  Join the [QQ communication group](../support/community-interaction.md)
-3.  Submit issues via the [Problem Feedback](../support/feedback-issues.md) page
+2.  Join the [QQ communication group](/en/docs/support/community-interaction)
+3.  Submit issues via the [Problem Feedback](/en/docs/support/feedback-issues) page
 
 </Callout>
