--- a/content/docs/ja/installation/config-maintenance/docker-compose-yml.mdx
+++ b/content/docs/ja/installation/config-maintenance/docker-compose-yml.mdx
@@ -147,7 +147,7 @@ New API は複数の環境変数設定をサポートしており、以下はよ
 | `NODE_TYPE`         | ノードタイプ（マスター/スレーブ）                    | `master`または`slave`                 |
 | `SYNC_FREQUENCY`    | 同期頻度（秒）                                       | `60`                                  |
 
-より完全な環境変数リストについては、[環境変数設定ガイド](environment-variables.md)を参照してください。
+より完全な環境変数リストについては、[環境変数設定ガイド](/ja/docs/installation/config-maintenance/environment-variables)を参照してください。
 
 ## マルチノードデプロイメント設定
 
@@ -219,5 +219,5 @@ docker compose down
 
 <Callout type="info" title="ヒント">
   Docker Compose のより詳しい使用方法については、[Docker Compose
-  インストールガイド](docker-compose-installation.md)を参照してください。
+  インストールガイド](/ja/docs/installation/deployment-methods/docker-compose-installation)を参照してください。
 </Callout>
