--- a/content/docs/zh/installation/deployment-methods/cluster-deployment.mdx
+++ b/content/docs/zh/installation/deployment-methods/cluster-deployment.mdx
@@ -252,6 +252,6 @@ environment:
 
 ## 相关文档
 
-- [环境变量配置指南](environment-variables.md) - 包含多节点部署的所有相关环境变量
-- [系统更新指南](system-update.md) - 多节点环境下的系统更新策略
-- [Docker Compose 配置说明](docker-compose-yml.md) - 用于编写集群节点配置文件
+- [环境变量配置指南](/zh/docs/installation/config-maintenance/environment-variables) - 包含多节点部署的所有相关环境变量
+- [系统更新指南](/zh/docs/installation/config-maintenance/system-update) - 多节点环境下的系统更新策略
+- [Docker Compose 配置说明](/zh/docs/installation/config-maintenance/docker-compose-yml) - 用于编写集群节点配置文件
